--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ x-shared_environment: &shared_environment
 
 services:
 
-  alpine-routeros:
-    image: alpine-routeros:latest
-    container_name: alpine-routeros
+  router-satellite-ubuntu:
+    image: router-satellite-ubuntu:latest
+    container_name: router-satellite-ubuntu
     restart: always
     volumes:
-      - "./Private/data:/data"
+      # - "./router-satellite-swift:/router-satellite-swift"
+      - "./data:/data"
     build:
       context: .
     environment:
