--- a/Dockerfile.ubuntu-jammy
+++ b/Dockerfile.ubuntu-jammy
@@ -1,7 +1,7 @@
 # ================================
 # Build image
 # ================================
-FROM swift:jammy as build
+FROM swift:5.8-jammy as build
 
 # Install OS updates and, if needed, sqlite3
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
@@ -44,7 +44,7 @@ RUN cp "$(swift build --package-path /build -c release --show-bin-path)/router-s
 # ================================
 # Run image
 # ================================
-FROM ubuntu:latest
+FROM ubuntu:jammy
 
 # Make sure all system packages are up to date, and install only essential packages.
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
@@ -60,22 +60,20 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
     && rm -r /var/lib/apt/lists/*
 
 # Create a vapor user and group with /app as its home directory
-RUN useradd --user-group --create-home --system --skel /dev/null --home-dir /app app-runner
+RUN useradd --user-group --create-home --system --skel /dev/null --home-dir /app vapor
 
 # Switch to the new home directory
 WORKDIR /app
 
 # Copy built executable and any staged resources from builder
-COPY --from=build --chown=app-runner:app-runner /staging /app
+COPY --from=build --chown=vapor:vapor /staging /app
 
 # Ensure all further commands run as the vapor user
-USER app-runner:app-runner
+USER vapor:vapor
 
 # Let Docker bind to port 8888
 EXPOSE 8888
 
 # Start the Vapor service when the image is run, default to listening on $APP_PORT in production environment
-ENTRYPOINT ["tail", "-f", "/dev/null"]
-
-CMD ["./app/router-satellite-swift"]
+ENTRYPOINT ["./router-satellite-swift"]
 #CMD ["serve", "--env", "production", "--hostname", "0.0.0.0", "--port", "$APP_PORT"]
