--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     container_name: router-satellite-ubuntu
     restart: always
     volumes:
-      # - "./router-satellite-swift:/router-satellite-swift"
-      - "./data:/data"
+      - "./router-satellite-swift:/router-satellite-swift"
+      # - "./data:/data"
     build:
       context: .
     environment:
